--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="logo.jpg" alt="logo">
+        <img src="../images/logo.jpg" alt="logo">
         <h1>Громов Илья Николаевич</h1>
         <p>1102о</p>
     </div>
