--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="hobby-block" id="hobby-block-1">
         <h2>Программирование</h2>
-        <img src="Prog.png" alt="Prog">
+        <img src="Prog.jpg" alt="Prog">
         <p>Ещё в детстве я занимался программированием, я изменял исходный код некоторых видеигр и занимался моддингом. Позже я писал простеньких ботов для дискорда.</p>
         <p>На ботах для дискорда я даже зарабатывал какую-то копеечку</p>
     </div>
