--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 
     <div class="hobby-block" id="hobby-block-1">
         <h2>Программирование</h2>
-        <img src="Prog.jpg" alt="Prog">
+        <img src="Prog.jpg" alt="../images/Prog">
         <p>Ещё в детстве я занимался программированием, я изменял исходный код некоторых видеигр и занимался моддингом. Позже я писал простеньких ботов для дискорда.</p>
         <p>На ботах для дискорда я даже зарабатывал какую-то копеечку</p>
     </div>
 
     <div class="hobby-block" id="hobby-block-2">
         <h2>Видеоигры</h2>
-        <img src="Game.png" alt="Game">
+        <img src="../images/Game.png" alt="Game">
         <p>В видеоигры игры я тоже играю с самого детства. Именно благодаря ним я обрёл большую часть друзей с кем общаюсь сейчас. Хоть и в жизни мы встречались лишь однажды, с ними так получилось я уже дружу дольше всех</p>
         <p>Я не просто играл в видеоигры, пару раз я играл на киберспортивных турнирах по игре Dead By Daylight, а сейчас занимаюсь скоростным прохожением некоторых игр</p>
     </div>
 
     <div class="hobby-block" id="hobby-block-3">
         <h2>Игра на гитаре</h2>
-        <img src="Guitar.png" alt="Guitar">
+        <img src="../images/Guitar.png" alt="Guitar">
         <p>Этим я начал заниматься всего пол года назад, меня всегда тянуло к музыке, когда-то я пытался делать биты в FL Studio, петь и многое другое, но больше всего понравилось именно играть на гитаре, пока-что я играю не очень уверенно ведь занимаюсь жтим мало и не так давно, но думаю позже буду играть очень хорошо</p>
     </div>
 
