--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="hobby-block" id="hobby-block-3">
         <h2>Игра на гитаре</h2>
         <img src="../images/Guitar.png" alt="Guitar">
-        <p>Этим я начал заниматься всего пол года назад, меня всегда тянуло к музыке, когда-то я пытался делать биты в FL Studio, петь и многое другое, но больше всего понравилось именно играть на гитаре, пока-что я играю не очень уверенно ведь занимаюсь жтим мало и не так давно, но думаю позже буду играть очень хорошо</p>
+        <p>Этим я начал заниматься всего пол года назад, меня всегда тянуло к музыке, когда-то я пытался делать биты в FL Studio, петь и многое другое, но больше всего понравилось именно играть на гитаре, пока-что я играю не очень уверенно ведь занимаюсь этим мало и не так давно, но думаю позже буду играть очень хорошо</p>
     </div>
 
     <div class="footer">
